# internet_connection_logger

./: analysis.ipynb  internet_logs.csv  internet_logs.parquet  internet_stats.json  internet_stats.parquet  main.py  pyproject.toml
